# Car-Racing-game

./: CMakeLists.txt  Deep_Dive_Report.md  Project_Documentation.md  check_sfml.cpp  sound_gen.cpp
src/: Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  World.cpp  World.h
src/AI/: AIController.cpp  AIController.h
src/Entities/: EnemyCar.cpp  EnemyCar.h  Entity.h  PlayerCar.cpp  PlayerCar.h
